--- a/css/styles.css
+++ b/css/styles.css
@@ -23,51 +23,15 @@
 .active>.nav-link{
   color: #fff !important;
 }
+
+.active1>.nav-link{
+  color: rgb(0, 255, 119) !important;
+}
+
 .green-link{
   color: #18910f !important;
 }
-.banner-container{
-  width: 100%;
-  height: 98vh;
-  margin-top: -83.77px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/banner.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.banner-info-container{
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-.banner-title{
-  width: 50%;
-  text-align: right;
-  position: absolute;
-  right: 7%;
-  top: 45%;
-  transform: translate(0, -50%);
-  color: #fff;
-  font-size: 40px;
-  font-weight: 600;
-}
-.banner-text{
-  width: 50%;
-  position: absolute;
-  right: 7%;
-  top: 50%;
-  text-align: right;
-  color: #fff;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 28px;
-}
-.button-container{
-  position: absolute;
-  right: 7%;
-  top: 74%;
-  text-align: center;
-}
+
 .card-container{
   padding: 50px 100px 15px 100px;
 
@@ -107,26 +71,136 @@
 .form-btn{
   width: 100%;
 }
-.footer-container{
-  padding: 20px 100px;
-  background-color: #1e4053;
 
-}
-.footer-link-list{
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.footer-link-item{
-  display: inline-block;
-  width: 80px;
+/* footer */
+
+
+.footer-container {
+  background-color: #0a121a; 
+  padding: 40px;
   text-align: center;
 }
-.footer-link{
-  color: #fff;
+
+.footer-link-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.footer-link:hover{
-  color: #fff;
+
+.footer-link-item {
+  margin: 5px;
+}
+
+.footer-link {
   text-decoration: none;
+  color: #ffffff; 
+}
+
+/* pantallas medianas y grandes */
+@media (min-width: 768px) {
+  .footer-link-list {
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+  }
+
+  .footer-link-item {
+      margin: 10px 20px;
+  }
+}
+
+/* banner */
+.banner-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 20px; 
+  width: 100%;
+  height: 98vh;
+  margin-top: -83.77px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/banner.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover; 
+}
+
+.banner-info-container {
+  text-align: center;
+}
+
+.banner-title {
+  width: 50%;
+  text-align: right;
+  position: absolute;
+  right: 7%;
+  top: 35%;
+  transform: translate(0, -50%);
+  color: #fff;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.banner-text {
+    width: 50%;
+    position: absolute;
+    right: 7%;
+    top: 40%;
+    text-align: right;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 28px;
+  }
+
+.button-container {
+  display: flex; 
+  justify-content: flex-end; 
+  position: absolute; 
+  right: 7%; 
+  top: 74%; 
+  width: 50%; 
+}
+
+.button-container button {
+    margin-left: 20px; 
+}
+
+/* tamaños de pantalla */
+@media (max-width: 768px) {
+  .banner-title {
+      font-size: 28px; 
+  }
+
+  .banner-text {
+      font-size: 14px; 
+  }
+
+  .button-container button {
+      font-size: 14px; 
+      padding: 5px 10px; 
+  }
+}
+.form-container {
+  margin-bottom: 20px;
+  padding: 0 15px; 
+}
+@media (min-width: 576px) {
+  .form-container {
+    padding: 0 50px; 
+  }
+}
+
+@media (min-width: 768px) {
+  .form-container {
+    padding: 0 100px; 
+  }
+}
+
+@media (min-width: 992px) {
+  .form-container {
+    padding: 0 330px; 
+  }
 }
